# ChangeLog for gnustep-apps/price
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-apps/price/ChangeLog,v 1.16 2008/09/21 15:44:01 nixnut Exp $

  21 Sep 2008; nixnut <nixnut@gentoo.org> price-0.8.2.ebuild:
  Stable on ppc wrt bug 235922

  17 Sep 2008; Markus Meier <maekke@gentoo.org> price-0.8.2.ebuild:
  amd64/x86 stable, bug #235922

  08 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> price-0.8.1.ebuild:
  amd64 stable wrt bug #207381

  21 Feb 2008; Bernard Cafarelli <voyageur@gentoo.org> price-0.8.2.ebuild:
  This version only works with unstable gnustep base

*price-0.8.2 (21 Feb 2008)

  21 Feb 2008; Bernard Cafarelli <voyageur@gentoo.org> +price-0.8.2.ebuild:
  Version bump

  30 Jan 2008; Brent Baude <ranger@gentoo.org> price-0.8.1.ebuild:
  Marking price-0.8.1 ppc for bug 207381

  25 Jan 2008; Christian Faulhammer <opfer@gentoo.org> price-0.8.1.ebuild:
  quote variable

  25 Jan 2008; Christian Faulhammer <opfer@gentoo.org> price-0.8.1.ebuild:
  stable x86, bug 207381

*price-0.8.1 (10 Sep 2007)

  10 Sep 2007; Bernard Cafarelli <voyageur@gentoo.org> -price-0.5.ebuild,
  -price-0.7.0.ebuild, +price-0.8.1.ebuild:
  Version bump from the GNUstep overlay

  22 Aug 2007; Christoph Mende <angelos@gentoo.org> price-0.7.0.ebuild:
  Added ~amd64 wrt bug #170433

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*price-0.7.0 (25 Mar 2006)

  25 Mar 2006; Fabian Groffen <grobian@gentoo.org> +price-0.7.0.ebuild:
  Version bump

  08 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> metadata.xml:
  Remove retiring dev from metadata.

  05 Nov 2005; Mark Loeser <halcy0n@gentoo.org> price-0.5.ebuild:
  Added ~x86 to KEYWORDS; bug #111377

*price-0.5 (24 Mar 2005)

  24 Mar 2005; Armando Di Cianno <fafhrd@gentoo.org> +metadata.xml,
  +price-0.5.ebuild:
  Original package import
