@@ -1,6 +1,8 @@
 DIST PRICE-0.8.1.tar.gz 161099 RMD160 4499cf0c2ad46cc56742864032a28be62c1fd140 SHA1 585c59facdfc01f9bd5f31a6b020f4676b4a5298 SHA256 99d5885a6c74ac174d8438086b46cc715f003656a8d10383f92aec1fb04e4388
 DIST PRICE-0.8.2.tar.gz 162612 RMD160 1e5d2f494f715a29617e989124f3234f4a5df21e SHA1 d12ef74d8eaffa11d1b4428f9e334b6d40900364 SHA256 e0bdef6f247ac54b7a9de9d088bac67097ad47d30ba9a709cf9b5a79708f2b0b
+DIST PRICE-0.8.3.tar.gz 169438 RMD160 58ae573e3582e09a7f5f3ab06d29188d25bad6da SHA1 b36905429a577ece7ec8c26263b0c4b460019e3d SHA256 54b3c68e61073c3868ff9aa842d67aafa7a98e4510de9586095f88172431be75
 EBUILD price-0.8.1.ebuild 563 RMD160 2b1c351a5ed2e183cd04798d3daad3aea2094267 SHA1 34b0ebc7b2fbf748629cbce690ef9eda11a505ba SHA256 d9b548a21c2b2056e02dc12a08e4ef16f682517dddb7dcb2e17c4f0ab6632c16
 EBUILD price-0.8.2.ebuild 541 RMD160 70ee7e6bb2c41c646013b604c99b770cb402598e SHA1 17013b43ffb91e4d4fd5188d2cc305d03f604104 SHA256 b7ab706e8a1247c325d110c12b1d98d433365a07312b2cea9d20e55c081a5e58
-MISC ChangeLog 1915 RMD160 ce20f1fc3a823f62fa0530c3de3554e84083d6ca SHA1 bab0b317c5bc297b2f2679b6012b15f2c7a0c1b5 SHA256 e0c9d43ec68b6c7a8705b7f61daedf4a395874e67ecc8b45ca7d75153c28d28d
+EBUILD price-0.8.3.ebuild 728 RMD160 f427ca3706da022bf66c2df961271e13a90ea7f4 SHA1 99de3d1b59d1a03b2e13de5de94624baf847c21a SHA256 b2270b17e1fbbaa133417b9338c1867ea0d2e679789b6b1fa9f84909d67d3aaf
+MISC ChangeLog 2110 RMD160 ed6a53ba1895ac281d4fb69c050d2102b7e778f4 SHA1 ea6bc3f042e7688fc6723c806fd0d68812c7d6db SHA256 ad57eef3903e657e387edaf48091772c6c63ddd569a3d960b2433e02389ab071
 MISC metadata.xml 528 RMD160 e216c1d4b47491f4b98507822f0046568d180465 SHA1 a727e664703e86d81c9397d6dfb28e884396d7cf SHA256 92ba6937bd208da667d39d254bc5841cce4daf66283df67d3f83ed5adbd84618
